# lambda-io

./: CMakeLists.txt  README.md
device-hardware/: README.md
device-hardware/vivado-project/: nvme-plus.xpr
device-hardware/vivado-project/nvme-plus.srcs/constrs_1/new/: constr.xdc  mig_const.xdc  pcie_ep_constr.xdc  xdma_constr.xdc
device-hardware/vivado-project/nvme-plus.srcs/sources_1/bd/nvme_p8c2/: nvme_p8c2.bd  nvme_p8c2.bxml  nvme_p8c2_ooc.xdc
device-hardware/vivado-project/nvme-plus.srcs/sources_1/bd/nvme_p8c2/hdl/: nvme_p8c2_wrapper.v
device-hardware/vivado-project/nvme-plus.srcs/sources_1/bd/nvme_p8c2/hw_handoff/: nvme_p8c2.hwh  nvme_p8c2_bd.tcl
device-hardware/vivado-project/nvme-plus.srcs/sources_1/bd/nvme_p8c2/ip/nvme_p8c2_auto_cc_0/: nvme_p8c2_auto_cc_0.dcp  nvme_p8c2_auto_cc_0.xci  nvme_p8c2_auto_cc_0.xml  nvme_p8c2_auto_cc_0_clocks.xdc  nvme_p8c2_auto_cc_0_ooc.xdc  nvme_p8c2_auto_cc_0_sim_netlist.v  nvme_p8c2_auto_cc_0_sim_netlist.vhdl  nvme_p8c2_auto_cc_0_stub.v  nvme_p8c2_auto_cc_0_stub.vhdl
device-hardware/vivado-project/nvme-plus.srcs/sources_1/bd/nvme_p8c2/ip/nvme_p8c2_auto_cc_1/: nvme_p8c2_auto_cc_1.dcp  nvme_p8c2_auto_cc_1.xci  nvme_p8c2_auto_cc_1.xml  nvme_p8c2_auto_cc_1_clocks.xdc  nvme_p8c2_auto_cc_1_ooc.xdc  nvme_p8c2_auto_cc_1_sim_netlist.v  nvme_p8c2_auto_cc_1_sim_netlist.vhdl  nvme_p8c2_auto_cc_1_stub.v  nvme_p8c2_auto_cc_1_stub.vhdl
device-hardware/vivado-project/nvme-plus.srcs/sources_1/bd/nvme_p8c2/ip/nvme_p8c2_auto_cc_2/: nvme_p8c2_auto_cc_2.dcp  nvme_p8c2_auto_cc_2.xci  nvme_p8c2_auto_cc_2.xml  nvme_p8c2_auto_cc_2_clocks.xdc  nvme_p8c2_auto_cc_2_sim_netlist.v  nvme_p8c2_auto_cc_2_sim_netlist.vhdl  nvme_p8c2_auto_cc_2_stub.v  nvme_p8c2_auto_cc_2_stub.vhdl
device-hardware/vivado-project/nvme-plus.srcs/sources_1/bd/nvme_p8c2/ip/nvme_p8c2_auto_cc_3/: nvme_p8c2_auto_cc_3.dcp  nvme_p8c2_auto_cc_3.xci  nvme_p8c2_auto_cc_3.xml  nvme_p8c2_auto_cc_3_clocks.xdc  nvme_p8c2_auto_cc_3_sim_netlist.v  nvme_p8c2_auto_cc_3_sim_netlist.vhdl  nvme_p8c2_auto_cc_3_stub.v  nvme_p8c2_auto_cc_3_stub.vhdl
device-hardware/vivado-project/nvme-plus.srcs/sources_1/bd/nvme_p8c2/ip/nvme_p8c2_auto_cc_4/: nvme_p8c2_auto_cc_4.dcp  nvme_p8c2_auto_cc_4.xci  nvme_p8c2_auto_cc_4.xml  nvme_p8c2_auto_cc_4_clocks.xdc  nvme_p8c2_auto_cc_4_ooc.xdc  nvme_p8c2_auto_cc_4_sim_netlist.v  nvme_p8c2_auto_cc_4_sim_netlist.vhdl  nvme_p8c2_auto_cc_4_stub.v  nvme_p8c2_auto_cc_4_stub.vhdl
device-hardware/vivado-project/nvme-plus.srcs/sources_1/bd/nvme_p8c2/ip/nvme_p8c2_auto_cc_5/: nvme_p8c2_auto_cc_5.dcp  nvme_p8c2_auto_cc_5.xci  nvme_p8c2_auto_cc_5.xml  nvme_p8c2_auto_cc_5_clocks.xdc  nvme_p8c2_auto_cc_5_ooc.xdc  nvme_p8c2_auto_cc_5_sim_netlist.v  nvme_p8c2_auto_cc_5_sim_netlist.vhdl  nvme_p8c2_auto_cc_5_stub.v  nvme_p8c2_auto_cc_5_stub.vhdl
device-hardware/vivado-project/nvme-plus.srcs/sources_1/bd/nvme_p8c2/ip/nvme_p8c2_auto_cc_6/: nvme_p8c2_auto_cc_6.dcp  nvme_p8c2_auto_cc_6.xci  nvme_p8c2_auto_cc_6.xml  nvme_p8c2_auto_cc_6_clocks.xdc  nvme_p8c2_auto_cc_6_sim_netlist.v  nvme_p8c2_auto_cc_6_sim_netlist.vhdl  nvme_p8c2_auto_cc_6_stub.v  nvme_p8c2_auto_cc_6_stub.vhdl
device-hardware/vivado-project/nvme-plus.srcs/sources_1/bd/nvme_p8c2/ip/nvme_p8c2_auto_cc_7/: nvme_p8c2_auto_cc_7.dcp  nvme_p8c2_auto_cc_7.xci  nvme_p8c2_auto_cc_7.xml  nvme_p8c2_auto_cc_7_clocks.xdc  nvme_p8c2_auto_cc_7_sim_netlist.v  nvme_p8c2_auto_cc_7_sim_netlist.vhdl  nvme_p8c2_auto_cc_7_stub.v  nvme_p8c2_auto_cc_7_stub.vhdl
device-hardware/vivado-project/nvme-plus.srcs/sources_1/bd/nvme_p8c2/sim/: nvme_p8c2.protoinst  nvme_p8c2.v
device-hardware/vivado-project/nvme-plus.srcs/sources_1/bd/nvme_p8c2/synth/: nvme_p8c2.hwdef  nvme_p8c2.v
device-hardware/vivado-project/nvme-plus.srcs/sources_1/bd/nvme_p8c2/ui/: bd_2b957fb6.ui  bd_656e2044.ui
drivers/nvme/host/: pci.c
ebpf/: CMakeLists.txt  README.md
ebpf/src/kern/: bitmap.c  bpf_helper_defs.h  common.h  grep.c  knn.c  stats32.c  stats64.c
ebpf/src/user/: bpf-test.c
fs/: read_write.c
host-eval/: CMakeLists.txt  README.md
host-eval/include/: common.h  config.hh  eval.hh  fmap.h  libbpf.h  libnvme.h  lio.hh  util.h  util.hh
host-eval/lib/: fmap.c  libnvme.c  nvme_internal.h
host-eval/src/: eval-dual.cc  eval-one.cc  gen-data.cc  warmup.cc
include/linux/: bpf_verifier.h  fs.h
include/uapi/linux/: bpf.h
kmod/: CMakeLists.txt  Makefile  dummy-main.c  proc.c
libbpf/: CMakeLists.txt
libbpf/src/: bpf.h  bpf_load.c  bpf_load.h  libbpf.h  uapi-bpf.h  uebpf.h
linux-lio/: README.md
linux-lio/drivers/nvme/host/: core.c  lio.h
linux-lio/include/linux/: bpf_types.h
linux-lio/include/uapi/linux/: fs.h
linux-lio/kernel/bpf/: Makefile  btf.c  core.c  lambda_io.c  syscall.c  verifier.c
linux-lio/mm/: filemap.c
linux-lio/samples/bpf/: Makefile  bpf_load.c
nvme-ctl/: CMakeLists.txt
nvme-ctl/include/: UioDev.hh  addr.hh  basic.h  config.h  debug.h  fw_common.h  hw_cdma.hh  hw_ddr.h  hw_mmap.h  libbpf.h  lio.hh  mem_util.h  util.h  xparameters.h
nvme-ctl/include/xlnx/: xil_io.h  xllfifo.h  xstatus.h
nvme-ctl/kmod/: Makefile  pmh.c
nvme-ctl/lib/xllfifo/: xllfifo.c  xstreamer.c
nvme-ctl/src/: hw_cdma.cc  hw_cmt.cc  hw_cmt.h  hw_ctx.cc  hw_ctx.h  hw_ddr.cc  hw_fet.cc  hw_fet.h  hw_mmap.cc  hw_pcie.cc  hw_pcie.h  hw_stream.cc  hw_stream.h  lio.cc  main.cc  mem_util.cc  nvme_admin_cmds.cc  nvme_admin_cmds.h  nvme_controller.cc  nvme_controller.h  nvme_nvm_cmds.cc  nvme_nvm_cmds.h  nvme_reg.h  nvme_struct.h
nvme-ctl/test/: dma.cc  memspeed.cc  memtest.cc  pcie-speed.cc
nvme-ctl/tmp/cmb/: ccnvme_test.c  ccnvme_test.h  cmb.c  horae.c  test-pmr.sh
nvme-ctl/tmp/dma-proxy/: dma-proxy-test.c  dma-proxy.c  dma-proxy.h
uebpf-rt/: CMakeLists.txt  README.md
uebpf-rt/include/: bitops.h  bpf.h  bpf_types.h  bpf_verifier.h  compiler.h  disasm.h  err.h  lio.h  ptrace.h  sort.h  tnum.h  types.h  uapi-bpf.h  uebpf.h  util.h
uebpf-rt/src/: core.c  disasm.c  lambda_io.c  libcall.c  sort.c  tnum.c  trace.c  verifier.c
uebpf-rt/src/aarch64/: asm.h  bpf_jit.c  bpf_jit.h  insn.c  insn.h
uebpf-rt/src/x86_64/: bpf_jit.c
(+901 files in other folders)
